<resources>
    <string name="app_name">6 lesson</string>
    <string name="product">товары</string>
    <string name="service">услуги</string>
    <string name="application">о приложении</string>
    <string name="reviews">отзывы</string>
    <string name="pod">Подводка Кайли</string>
    <string name="lip">Коллекция помад Кайли</string>
    <string name="lipi">Помада Кайли</string>
    <string name="opisanie">В приложении вы найдете любую костеметику по вашему типу кожи.
     У нас только качественные товары и услуги.</string>
    <string name="otzyv">Лучшее приложение по покупке косметики</string>
    <string name="txtpay">Оплата онлайн</string>
    <string name="txtdost">Доставка</string>
    <string name="txtconsul">Консультации</string>
</resources>