<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service">

    <ImageView
        android:id="@+id/consul"
        android:src="@drawable/consultation"
        android:layout_width="200dp"
        android:layout_height="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtconsul"
        android:text="@string/txtconsul"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/consul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/txtdost"
        android:text="@string/txtdost"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtconsul"
        app:layout_constraintBottom_toTopOf="@id/txtpay"/>

    <TextView
        android:id="@+id/txtpay"
        android:text="@string/txtpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@id/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtdost"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/dost"
        android:src="@drawable/dostavka"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consul"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/pay"
        android:src="@drawable/images"
        android:layout_width="200dp"
        android:layout_height="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dost"
        android:layout_marginTop="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>