<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prodact">

    <ImageView
        android:id="@+id/lipstiks"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/lipstik"
        app:layout_constraintEnd_toStartOf="@id/podvodka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>
    <ImageView
        android:layout_marginLeft="16dp"
        android:id="@+id/podvodka"
        android:src="@drawable/podvodka"
        android:layout_width="195dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toEndOf="@id/lipstiks"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <TextView
        android:id="@+id/lip"
        android:text="@string/lip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lipstiks"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp" />
    <TextView
        android:id="@+id/pod"
        android:text="@string/pod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/podvodka"
        app:layout_constraintStart_toEndOf="@id/lip"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/lipi"
        android:src="@drawable/png_lipstick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lip"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:text="@string/lipi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lipi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
/>


</androidx.constraintlayout.widget.ConstraintLayout>